# screen_guardian

./: .gitignore  Cargo.toml  LICENSE.md  README.md  test_affinity.rs
.super-dev/changes/feature-expand/: spec.md  tasks.md
apps/screen-guardian-cli/: Cargo.toml
apps/screen-guardian-cli/src/: main.rs
apps/screen-guardian-gui/: Cargo.toml  tauri.conf.json
apps/screen-guardian-gui/src/: main.rs  test_affinity.rs
apps/screen-guardian-gui/ui/: index.html  main.js  style.css
apps/screen-guardian-helper/: Cargo.toml
apps/screen-guardian-helper/src/: main.rs
apps/screen-guardian-hook-dll/: Cargo.toml
apps/screen-guardian-hook-dll/src/: lib.rs
apps/screen-guardian-inject-dll/: Cargo.toml
apps/screen-guardian-inject-dll/src/: lib.rs
crates/screen-guardian-core/: Cargo.toml
crates/screen-guardian-core/src/: affinity.rs  config.rs  daemon.rs  gpu_protection.rs  inject.rs  lib.rs  models.rs  policy.rs  process_monitor.rs  rules.rs  screenshot_apps.rs  timefmt.rs  windows.rs
output/: quality-report.md  research.md  screen_guardian-architecture.md  screen_guardian-prd.md  screen_guardian-uiux.md
screen-guardian-gui/: tauri.conf.json
screen-guardian-gui/ui/: index.html  main.js  style.css
