[workspace]
members = [
  "crates/screen-guardian-core",
  "apps/screen-guardian-cli",
  "apps/screen-guardian-helper",
  "apps/screen-guardian-gui",
  "apps/screen-guardian-inject-dll",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["screen_guardian team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tabled = "0.17"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
] }
